--- a/LudumDare53/.gitattributes
+++ b/LudumDare53/.gitattributes
@@ -1,4 +1,4 @@
-/Assets/StreamingAssets/*.bank filter=lfs diff=lfs merge=lfs -text
+*.bank filter=lfs diff=lfs merge=lfs -text
 /Assets/Plugins/fmodstudio.bundle/** filter=lfs diff=lfs merge=lfs -text
 /Assets/Plugins/fmodstudioL.bundle/** filter=lfs diff=lfs merge=lfs -text
 /Source/** filter=lfs diff=lfs merge=lfs -text
