--- a/.gitattributes
+++ b/.gitattributes
@@ -5,7 +5,7 @@
 [attr]lfs -text filter=lfs diff=lfs merge=lfs
 
 # Default to auto-normalized line endings.
-* text eol=lf
+* text eol=auto
 
 # Code
 *.cs text diff=csharp
