--- a/LudumDare53/Packages/manifest.json
+++ b/LudumDare53/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity-atoms.unity-atoms": "https://github.com/unity-atoms/unity-atoms.git",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "2.0.3",
     "com.unity.feature.characters-animation": "1.0.0",
     "com.unity.feature.worldbuilding": "1.0.1",
